--- a/tutorials/Scheduling Tutorial.ipynb
+++ b/tutorials/Scheduling Tutorial.ipynb
@@ -30,7 +30,7 @@
    "id": "9e20d5b4",
    "metadata": {},
    "source": [
-    "Given a list of $n$ targets, we assosciate a unique identifying number to each, denoted as $r \\in R$ where $R = \\{0,1,...,n-1\\}$ is the total set of targets. Each target has a scaler priority $p_{r}$, and with this model we seek the optimal schedule to maximize the scientific ouput (observations * priority). Each target has a required minimum cadence $c_{r}$ after being observed that must pass before it may be targeted again. In other words, all observations of target $r$ must be at least $c_{r}$ days apart."
+    "Given a list of $n$ targets, we associate a unique identifying number to each, denoted as $r \\in R$ where $R = \\{0,1,...,n-1\\}$ is the total set of targets. Each target has a scaler priority $p_{r}$, and with this model we seek the optimal schedule to maximize the scientific ouput (observations * priority). Each target has a required minimum cadence $c_{r}$ after being observed that must pass before it may be targeted again. In other words, all observations of target $r$ must be at least $c_{r}$ days apart."
    ]
   },
   {
