Updated 2023A data contents

--- a/tutorials/Learning Gurobi.ipynb
+++ b/tutorials/Learning Gurobi.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "### Creating a Model\n",
     "<br>\n",
-    "The Model object in Gurobi contains all the information regarding a linear programming problem. All variables and constraints are initialized inside this 'unsolved' state. Once we eventually solve said problem, the solved state of the model can be queried for attributes."
+    "The Model object in Gurobi contains all the information regarding a linear programming problem. All variables and constraints are initialized inside this 'unsolved' state. Once we eventually optimize said problem, the solved state of the model can be queried for attributes."
    ]
   },
   {
